<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">
    <string name="app_name">Iglesia BFR, Naranjo</string>
    <string name="TittleDailyVersTxt">Versículo Diario</string>
    <string name="ErrorCargaMsg">Error al cargar, vuelva a intentar</string>
    <string name="ErrorCargaMsgRtr">Error al cargar, volviendo a intentar…</string>
    <string name="librosTitle">Libros</string>
    <string name="favoritosBtn">Favoritos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InitializingApp">Iniciando…</string>
    <string name="NotifGranted">Recibirás notificaciones sobre nuevos eventos y actividades</string>
    <string name="NotifNotGranted">No recibirás notificaciones sobre nuevos eventos y actividades</string>
    <string name="NotifTitle">Notificación Iglesia</string>
    <string name="NotifId" translatable="false">IglesiaNotif</string>
    <string name="NotifName" translatable="false">Actualizaciones</string>
    <string name="anterior">Anterior</string>
    <string name="favoritos">+ Favorito</string>
    <string name="siguiente">Siguiente</string>
    <string name="registrarlb">REGISTRAR</string>
    <string name="loginlb">INICIAR SESIÓN</string>
    <string name="churchDesc">Iglesia</string>
    <string name="loginTitle">Inicio de sesión</string>
    <string name="loginBtn">Ingresar</string>
    <string name="rememberCheckbox">Recordar sesión</string>
    <string name="incompleteDataWarning">Los datos están incompletos</string>
    <string name="incorrectDataWarning">Las credenciales ingresadas son incorrectas</string>
    <string name="forgotPass">Restablecer contraseña</string>
    <string name="resetPasswordEmailSent">El correo ha sido enviado exitosamente</string>
    <string name="newPass">Nueva contraseña</string>
    <string name="confirmNewPass">Confirmar nueva contraseña</string>
    <string name="userNotValid">Este usuario no existe</string>
    <string name="hintName">Nombre</string>
    <string name="hintEmail">Correo electrónico</string>
    <string name="hintPassword1">Contraseña</string>
    <string name="hintPassword2">Confirmar contraseña</string>
    <string name="hintBirthdate">Fecha de nacimiento</string>
    <string name="registrarBtn">Registrarse</string>
    <string name="registrarlb2">Registro</string>
    <string name="calendarioDesc">Calendario</string>
    <string name="homepageTitle">¡Bienvenido!</string>
    <string name="upcomingEvent">Próximos Eventos</string>
    <string name="upcomingActiv">Próximas Actividades</string>
    <string name="cults">Cultos</string>
    <string name="fullCalendarBut">Calendario completo</string>
    <string-array name="calendarType">
        <item>Evento</item>
        <item>Culto</item>
        <item>Actividad</item>
    </string-array>
    <string name="detailsCalendarTittle">Detalles</string>
    <string name="adminpageTitle">Administración</string>
    <string name="eventBut">Eventos</string>
    <string name="actBut">Actividades</string>
    <string name="cultBut">Cultos</string>
    <string name="adminCultHeaderFecha">Día</string>
    <string name="adminCultTitle">Cultos</string>
    <string name="createCultTitle">Crear Culto</string>
    <string name="createCultWeekday">Día de la semana</string>
    <string name="createCultSuccess">Culto creado exitosamente</string>
    <string name="createCultFailed">Error al crear el culto, vuelva a intentarlo</string>
    <string-array name="createCultWeekdays">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
    <string name="cultDetailsTitle">Detalles del culto</string>
    <string name="cultNotFound">Culto no encontrada, vuelva a intentar</string>
    <string name="cultDetailModAsk">¿Seguro que quieres modificar este culto?</string>
    <string name="cultDetailDelAsk">¿Seguro que quieres borrar este culto?</string>
    <string name="cultDetailModSucc">Culto modificado con éxito</string>
    <string name="cultDetailModFail">Error al modificar el culto, vuelva a intentarlo</string>
    <string name="cultDetailDelSucc">Culto borrado con éxito</string>
    <string name="cultDetailDelFail">Error al borrar el culto, vuelva a intentarlo</string>
    <string name="cultDetailWeekday">Día</string>
    <string name="cultDetailResumeSucc">Culto reanuado con éxito</string>
    <string name="cultDetailResumeFail">Error al reanuar el culto, vuelva a intentarlo</string>
    <string name="cultDetailCancelSucc">Culto cancelado con éxito</string>
    <string name="cultDetailCancelFail">Error al cancelar el culto, vuelva a intentarlo</string>
    <string name="cultDetailCancelAsk">¿Seguro que quieres cancelar este culto?</string>
    <string name="cultDetailResumeAsk">¿Seguro que quieres reanudar este culto?</string>
    <string name="cultDetailCancelBut">Cancelar esta semana</string>
    <string name="cultDetailResumeBut">Reanuar esta semana</string>
    <string name="adminActTitle">Actividades</string>
    <string name="createActTitle">Crear Actividad</string>
    <string name="createActSuccess">Actividad creada exitosamente</string>
    <string name="createActFailed">Error al crear la actividad, vuelva a intentarlo</string>
    <string name="actDetailsTitle">Detalles de la Actividad</string>
    <string name="actNotFound">Actividad no encontrada, vuelva a intentar</string>
    <string name="actDetailModAsk">¿Seguro que quieres modificar esta actividad?</string>
    <string name="actDetailDelAsk">¿Seguro que quieres borrar esta actividad?</string>
    <string name="actDetailModSucc">Actividad modificada con éxito</string>
    <string name="actDetailModFail">Error al modificar la actividad, vuelva a intentarlo</string>
    <string name="actDetailDelSucc">Actividad borrada con éxito</string>
    <string name="actDetailDelFail">Error al borrar la actividad, vuelva a intentarlo</string>
    <string name="adminEventosTitle">Eventos</string>
    <string name="adminEventosSearch">Busqueda</string>
    <string name="adminEventosHeaderName">Nombre</string>
    <string name="adminEventosHeaderFecha">Fecha</string>
    <string name="createEventBut">Crear</string>
    <string name="createEventTitle">Crear Evento</string>
    <string name="createName">Nombre</string>
    <string name="createDesc">Descripción</string>
    <string name="createDate">Fecha</string>
    <string name="createTime">Hora</string>
    <string name="createDatePicker">Seleccione la fecha</string>
    <string name="createTimePicker">Seleccione la hora</string>
    <string name="createTextEmpty">Entrada de texto vacía</string>
    <string name="createDateEmpty">Entrada de fecha vacía</string>
    <string name="createTimeEmpty">Entrada de hora vacía</string>
    <string name="createTimeAlreadyPassed">La hora ya paso</string>
    <string name="createEventSuccess">Evento creado exitosamente</string>
    <string name="createEventFailed">Error al crear el evento, vuelva a intentarlo</string>
    <string name="eventDetailsTitle">Detalles del Evento</string>
    <string name="eventDetailsMod">Modificar</string>
    <string name="eventDetailsModAccept">Confirmar Modificación</string>
    <string name="eventDetailsDel">Borrar</string>
    <string name="eventNotFound">Evento no encontrado, vuelva a intentar</string>
    <string name="eventDetailModAsk">¿Seguro que quieres modificar este evento?</string>
    <string name="eventDetailDelAsk">¿Seguro que quieres borrar este evento?</string>
    <string name="eventDetailModSucc">Evento modificado con éxito</string>
    <string name="eventDetailModFail">Error al modificar el evento, vuelva a intentarlo</string>
    <string name="eventDetailDelSucc">Evento borrado con éxito</string>
    <string name="eventDetailDelFail">Error al borrar el evento, vuelva a intentarlo</string>
    <string name="loadingDialogText">Cargando…</string>
    <string name="ConfDiagConf">Sí</string>
    <string name="ConfDiagDeny">No</string>
    <string name="calendarNavTitle">Calendario</string>
    <string name="consejeriaNavTitle">Consejeria</string>
    <string name="foroNavTitle">Foro</string>
    <string name="BibliaNavTitle">Biblia</string>
    <string name="grabacionesNavTitle">Grabaciones</string>
    <string name="adminNavTitle">Admin</string>
    <string name="asistencia_de_evento">Asistencia de evento</string>
    <string name="regresar">Regresar</string>
    <string name="Regresar">Regresar</string>
    <string name="createattendancebutt">createAttendanceButt</string>
    <string name="RegresarCE">Regresar</string>
    <string name="todo">TODO</string>
    <string name="Titulo">Titulo</string>
    <string name="Url">Url</string>
    <string name="Todo">TODO</string>
    <string name="loadvideo">loadVideo</string>
    <string name="ispersonpresent">Presente</string>
    <string name="createEventTitleCult">Control de asistencia</string>
    <string name="ispersonpresentCult">Presente</string>
    <string name="createAttendanceCultButt">Guardar asistencia</string>
    <string name="RegresarCult">Regresar</string>
    <string name="createNameCult">Nombre</string>
    <string name="isPersonPresentCult">Present</string>
    <string name="createEventTitlecult">Asistencia de culto</string>
    <string name="createNamecult">Nombre</string>
    <string name="createAttendancecultButt">Guardar asistencia</string>
    <string name="isPersonPresentcult">Presente</string>
    <string name="Regresarcult">Regresar</string>
    <string name="loadvideos">Cargar video nuevo</string>
    <string name="libraryInvent">Inventario de la librería</string>
    <string name="libraryInventB">Inventario de biblioteca</string>
    <string name="materialsInvent">Inventario de la escuela</string>
    <string name="materialInvent">Inventario de la escuela</string>
    <string name="loadVideo">Crear nuevo video</string>
    <string name="libraryBut">Inventario de la librería</string>
    <string name="materialInventBut">Inventario de la escuela</string>
    <string name="adminSchoolBut">Gestión de la escuela dominical</string>
    <string name="homepageTitleCult">Cultos</string>
    <string name="markEventAttendanceCultBut">Registrar asistencia</string>
    <string name="backAdminEventCultButton">Regresar</string>
    <string name="createEventCultBut">Crear culto</string>
    <string name="createEventTitlec">Culto</string>
    <string name="adminLibraryTitle">"Gestión de la Biblioteca "</string>
    <string name="addProductBut">Añadir un nuevo producto</string>
    <string name="AdminLibrary">Gestión de la Biblioteca</string>
    <string name="createattendancebut">Guardar asistencia</string>
    <string name="createattendancebutto">Guardar asistencia</string>
    <string name="addNewItem">Añadir nuevo</string>
    <string name="Title">Título</string>
    <string name="Name">Nombre</string>
    <string name="Quantity">Cantidad</string>
    <string name="Price">Precio</string>
    <string name="adminSchoolTitle">Gestión de la escuela dominical</string>
    <string name="addMaterialBut">Añadir nuevo horario</string>
    <string name="TitleTeacher">Nombre de la profesora</string>
    <string name="TypeClass">Tipo de clase(Bebés, Niños, Joven)</string>
    <string name="InitialMonth">Fecha de inicio</string>
    <string name="FinalMonth">Fecha final</string>
    <string name="adminInventoryTitle">Gestión de control de inventario de materiales y recursos</string>
    <string name="addInventoryBut">Agregar nuevo producto al inventario</string>
    <string name="safeNewItem">Guardar nuevo inventario o producto</string>
    <string name="RegresarLogin">Regresar</string>
    <string name="TypeProduct">Tipo de producto</string>
    <string name="addNewBook">Añadir Libro</string>
    <string name="addNewMaterial">Añadir Material</string>
</resources>