<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/homepageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/registrarlb2"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="text"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/hintName"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="14dp"
        android:paddingRight="10dp"
        android:paddingBottom="14dp" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="14dp"
        android:paddingRight="10dp"
        android:paddingBottom="14dp" />

    <EditText
        android:id="@+id/inputPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/hintPassword1"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="14dp"
        android:paddingRight="10dp"
        android:paddingBottom="14dp" />

    <EditText
        android:id="@+id/inputPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/hintPassword2"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="14dp"
        android:paddingRight="10dp"
        android:paddingBottom="14dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/calendarioDesc"
            app:tint="@color/white"
            app:backgroundTint="?attr/iconTint"
            app:srcCompat="@drawable/calendar" />

        <TextView
            android:id="@+id/inputBirthdate"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="password"
            android:ems="10"
            android:fontFamily="@font/comfortaa_light"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="14dp"
            android:paddingRight="10dp"
            android:paddingBottom="14dp"
            android:text="@string/hintBirthdate"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/soft_rectangle_btn"
        android:backgroundTint="@color/blue"
        android:text="@string/registrarBtn"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>