<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/homepageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/loginTitle"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="text"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="14dp"
        android:paddingRight="10dp"
        android:paddingBottom="14dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:fontFamily="@font/comfortaa_light"
        android:hint="@string/hintPassword1"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="14dp"
        android:paddingRight="10dp"
        android:paddingBottom="14dp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/sessionCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/comfortaa_light"
            android:text="@string/rememberCheckbox"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/soft_rectangle_btn"
        android:backgroundTint="@color/blue"
        android:text="@string/loginBtn"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/BackLoginABtn"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/ripple_soft_rectangle_btn"
        android:backgroundTint="@color/blue"
        android:text="@string/RegresarLogin"
        tools:text="Regresar" />

</LinearLayout>